# rpicam-ipc

./: app.py  main.cpp  meson.build  requirements.txt  rpicam_ipc.cpp
controller/: meson.build  video_camera_ctl.cpp  video_camera_ctl.hpp  web_ctl.cpp  web_ctl.hpp
core/: buffer_sync.cpp  buffer_sync.hpp  camera.cpp  camera.hpp  completed_request.hpp  dma_heaps.cpp  dma_heaps.hpp  frame_buffer.hpp  logging.hpp  meson.build  metadata.hpp  stream_info.hpp  video_camera.cpp  video_camera.hpp  video_camera_ctl.cpp
encoder/: encoder.cpp  encoder.hpp  h264_encoder.cpp  h264_encoder.hpp  meson.build
output/: file_output.hpp  meson.build  output.cpp  output.hpp  output_manager.cpp  output_manager.hpp  remote_output.hpp
templates/: index.html  rpicam.html
text/: meson.build  text.cpp  text.hpp  timestamp.cpp  timestamp.hpp
web/: dashboard.html  http-live-player-worker.js  index.html  main.css  main.js  meson.build  rpicam.html  web_server.cpp  webu.cpp  webu.hpp
